--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -168,11 +168,11 @@ visitors %>%
 _Perform the same calculation for the 2021 admissions data._
 
 ```{r Ex_h}
-#visitors %>% 
-#  ______(
-#    __________,
-#    __________
-#  )
+visitors %>% 
+  summarise(
+    median_2021 = median(n_2021, na.rm = T),
+    mean_2021 = mean(n_2021, na.rm = T)
+  )
 ```
 
 All values in the output are `NA`!
@@ -181,7 +181,8 @@ All values in the output are `NA`!
 
 _What does `NA` stand for and why are you getting this as your answer to the previous question._
 
-**Write your answer here**
+**NA means not available and this is because some values don't exist so a comprehensive average
+cannot be calculated**
 
 
 
@@ -190,7 +191,11 @@ _What does `NA` stand for and why are you getting this as your answer to the pre
 
 _Look at the help pages for the `mean()` and `median()` commands to see what the input argument `na.rm` does. Edit your code from exercise h so that it computes the summary statistics where data is available._
 
-**Write your answer here**
+visitors %>% 
+  summarise(
+    median_2021 = median(n_2021, na.rm = T),
+    mean_2021 = mean(n_2021, na.rm = T)
+  )
 
 
 
@@ -212,7 +217,7 @@ visitors %>%
 
 _Observe in question 6 that the mean statistics across all settings are much larger than the corresponding median statistics. Discuss in your group what this suggests about the data._
 
-**Write your answer here**
+Main attractions pull in much bigger numbers so pulling the mean up while the mid point is still relatively low
 
 
 
@@ -245,11 +250,11 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 
 
 ```{r Ex_l}
-#________ %>%
-#  ______(_______)
+visitors_with_nations %>%
+  count(nation)
 ```
 
-
+Not reliable becuase not enough data for some countries 
 
 # Challenging Exercises
 
@@ -258,8 +263,9 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 _Within each of the 4 nations, what is the proportion of tourist attractions that have free admission for all visitors?_
 
 ```{r Ex_m}
-# Write your code here
-
+visitors_with_nations %>%
+  group_by(nations) %>%
+  
 
 ```
 
